objects/LLC_BI__Product_Change_Detail__c.object
<CustomObject>
    <description>The Product Change Detail references Product Packages and their related financial products and can be used for keeping track of changes in products.</description>
    <fields>
        <fullName>LLC_BI__Category__c</fullName>
        <description>Category__c is the business category of the Product Package referenced in the Product Change Detail Object.</description>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Treasury Maintenance</fullName>
                    <default>true</default>
                    <label>Treasury Maintenance</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Change_Status__c</fullName>
        <description>Change_Status__c represents the status of the change detail, and is set by the system based on the workflow.</description>
        <label>Change Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product_Package__c contains the details of the related products and services.</description>
        <label>Product Package</label>
        <referenceTo>LLC_BI__Product_Package__c</referenceTo>
        <relationshipLabel>Product Change Details</relationshipLabel>
        <relationshipName>Product_Change_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Treasury_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Treasury_Service__c is a lookup field for each Treasury Service related to this Change Detail Object.</description>
        <label>Treasury Service</label>
        <referenceTo>LLC_BI__Treasury_Service__c</referenceTo>
        <relationshipLabel>Product Change Details</relationshipLabel>
        <relationshipName>Product_Change_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Product Change Detail</label>
    <nameField>
        <displayFormat>PCD-{000000000}</displayFormat>
        <label>Product Change Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Change Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>